# franneck94-UdemyCppGui

./: TODO.md
2_ImGui/0_StartProject/: CMakeLists.txt
2_ImGui/0_StartProject/src/: render.cpp
2_ImGui/10_Final/: CMakeLists.txt
2_ImGui/10_Final/src/: AdvCalc.cpp  Calender.cpp  Calender.hpp  Desktop.cpp  Desktop.hpp  FileExplorer.hpp  MediaPlayer.cpp  MediaPlayer.hpp  Paint.hpp  main.cpp  render.cpp  render.hpp
2_ImGui/1_HelloWorld/: CMakeLists.txt
2_ImGui/1_HelloWorld/src/: cycle.cpp  render.cpp  render.hpp
2_ImGui/2_FileExplorer/src/: render.cpp  render.hpp
2_ImGui/2_TextEditor/src/: cycle.cpp  render.cpp  render.hpp
2_ImGui/3_AdvCalc/: CMakeLists.txt
2_ImGui/3_AdvCalc/src/: render.cpp  render.hpp
2_ImGui/3_FileExplorer/src/: render.cpp
2_ImGui/3_Paint/src/: cycle.cpp  render.cpp  render.hpp
2_ImGui/4_Diff/: CMakeLists.txt
2_ImGui/4_Diff/src/: cycle.cpp  render.cpp  render.hpp
2_ImGui/4_TextEditor/src/: render.hpp
2_ImGui/5_Calendar/: CMakeLists.txt
2_ImGui/5_Calendar/src/: cycle.cpp  main.cpp  render.cpp  render.hpp
2_ImGui/5_Diff/src/: render.cpp  render.hpp
2_ImGui/6_FileExplorer/src/: cycle.cpp  render.cpp  render.hpp
2_ImGui/7_AdvCalc/: CMakeLists.txt  vcpkg.json
2_ImGui/7_AdvCalc/src/: cycle.cpp  render.cpp  render.hpp
2_ImGui/7_Calendar/src/: render.cpp  render.hpp
2_ImGui/8_MediaPlayer/: CMakeLists.txt
2_ImGui/8_MediaPlayer/src/: cycle.cpp  main.cpp  render.cpp  render.hpp
2_ImGui/9_Desktop/: CMakeLists.txt
2_ImGui/9_Desktop/src/: main.cpp  render.hpp
2_ImGui/9_Final/src/: render.cpp  render.hpp
2_ImGui/AdvCalc/src/: main.cpp
2_ImGui/Calendar/src/: main.cpp  render.cpp  render.hpp
2_ImGui/CsvTool/src/: render.cpp  render.hpp
2_ImGui/Desktop/: CMakeLists.txt
2_ImGui/Desktop/src/: CLock.cpp  Clock.hpp  clock.cpp  clock.hpp  main.cpp  render.cpp  render.hpp
2_ImGui/DiffViewer/: vcpkg.json
2_ImGui/DiffViewer/src/: render.cpp  render.hpp
2_ImGui/FileExplorer/: CMakeLists.txt
2_ImGui/FileExplorer/src/: render.cpp  render.hpp
2_ImGui/Final/: CMakeLists.txt
2_ImGui/Final/_Start/: AdvCalc.cpp  AdvCalc.hpp  Calender.cpp  Calender.hpp  Clock.cpp  Clock.hpp  CsvEditor.cpp  CsvEditor.hpp  Desktop.cpp  Desktop.hpp  Diff.cpp  Diff.hpp  FileExplorer.cpp  FileExplorer.hpp  MediaPlayer.cpp  MediaPlayer.hpp  OtherTopics.cpp  OtherTopics.hpp  Paint.cpp  Paint.hpp  TextEditor.cpp  TextEditor.hpp  main.cpp
2_ImGui/Final/src/: AdvCalc.cpp  AdvCalc.hpp  BaseView.hpp  Calender.cpp  Calender.hpp  Clock.cpp  Clock.hpp  Colors.hpp  CsvEditor.cpp  CsvEditor.hpp  Desktop.cpp  Desktop.hpp  Diff.cpp  Diff.hpp  FileExplorer.cpp  FileExplorer.hpp  MediaPlayer.cpp  MediaPlayer.hpp  OtherTopics.cpp  OtherTopics.hpp  Paint.cpp  Paint.hpp  TextEditor.cpp  TextEditor.hpp  WindowBase.cpp  WindowBase.hpp  main.cpp  (+1 more)
2_ImGui/HelloWorld/: CMakeLists.txt
3_Qt/1_HelloWorld/: CMakeLists.txt  vcpkg.json
3_Qt/1_HelloWorld/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
3_WxGui/1_HelloWorld/: CMakeLists.txt
3_WxGui/2_TextEditor/: CMakeLists.txt  vcpkg.json
(+22 files in other folders)
